--- a/styles/style.scss
+++ b/styles/style.scss
@@ -26,6 +26,7 @@ html {
     line-height: 1.2;
     margin: 0;
     padding: 0;
+    //border: 1px solid #f00 !important;
 }
 
 body {
@@ -34,9 +35,10 @@ body {
 }
 
 .header {
-    display: flex;
-    justify-content: center;
-    width: 100vw;
+    // display: flex;
+    // justify-content: center;
+    // margin: auto;
+    //width: 100vw;
     text-align: center;
     background: $primary-color;
     box-shadow: $shadow-1;
@@ -44,16 +46,17 @@ body {
 }
 
 .container {
-    width: $desktop-width;
+    width: 100%;
     height: 5rem;
     padding: 0 5rem;
+    margin: auto;
 }
 
 .container.flex-container {
-    @extend .container;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    overflow-x: hidden;
 }
 
 .button {
@@ -65,11 +68,23 @@ body {
         font-weight: 300;
         font-size: 1rem;
     }
+
+    &-border {
+        color: $tertiary-color;
+        background: $primary-color;
+        border: none;
+        font-weight: 300;
+        font-size: 1rem;
+        margin-right: 1rem;
+        text-decoration: none;
+        padding: 1rem 1rem;
+        border-radius: $rounded-corners;
+    }
 }
 
 main {
     display: flex;
-    width: 100vw;
+    //width: 100vw;
     justify-content: center;
 }
 
@@ -79,6 +94,7 @@ main {
     align-items: center;
     padding: 2rem 0;
     margin-bottom: 1rem;
+    font-size: 1.4rem;
 
     .input-country {
         position: relative;
@@ -129,6 +145,7 @@ main {
 
 .countries {
     background: $secondary-color;
+    font-size: 1.4rem;
 
     .countries-list {
         display: grid;
@@ -141,6 +158,7 @@ main {
             background: $primary-color;
             border-radius: $rounded-corners;
             box-shadow: $shadow-1;
+            transition: all 0.2s;
 
             &-area {
                 text-decoration: none;
@@ -163,11 +181,87 @@ main {
                 }
                 p {
                     margin-bottom: 0.5rem;
+                    padding-bottom: 0.5rem;
                     font-weight: 600;
                 }
                 span {
                     font-weight: 300;
                 }
+            }
+        }
+
+        .country-card:hover {
+            transform: scale(1.05);
+
+        }
+    }
+}
+
+.back {
+    display:flex;
+    align-items: center;
+    height: 10rem;
+
+    .button-back {
+        text-decoration: none;
+        color: $tertiary-color;
+        font-size: 1.6rem;
+        background: $primary-color;
+        padding: 0.8rem 3rem;
+        border: $rounded-corners;
+        box-shadow: $shadow-1;
+    }
+}
+
+.country-info {
+    //width: 100%;
+    display: flex;
+    justify-content: space-between;
+    font-size: 1.6rem;
+    
+    &__flag {
+
+        width: 50%;
+        img {
+            height: 30rem;
+        }
+    }
+
+    &__data {
+        width: 50%;
+        padding: 3rem;
+
+        .country-name {
+            font-size: 2.5rem;
+            margin-bottom: 2rem;
+        }
+
+        .data-section {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 2rem;
+
+            p {
+                margin-bottom: 0.5rem;
+                font-weight: 800;
+
+                span {
+                    font-weight: 500;
+                }
+            }
+
+            .data-section-1 {
+                //padding-right: 3rem;
+            }
+        }
+
+        .border-countries {
+
+            .border-countries-list {
+                display:flex;
+                flex-wrap: wrap;
+                // line-height: 2;
+                align-content: space-between;
             }
         }
     }
