update main branch

--- a/styles/_icons.scss
+++ b/styles/_icons.scss
@@ -9,3 +9,9 @@
     fill: $tertiary-color;
     width: 1.5rem;
 }
+
+.button-back svg {
+    display: inline;
+    width: 1.5rem;
+    fill: $tertiary-color;
+}
