--- a/styles/style.css
+++ b/styles/style.css
@@ -81,7 +81,7 @@ body {
   margin-right: 1rem;
   text-decoration: none;
   padding: 1rem 1rem;
-  border-radius: 5px;
+  border-radius: 10px;
 }
 
 main {
@@ -119,7 +119,7 @@ main {
   padding: 1.5rem 5rem;
   font-size: 1rem;
   width: 40rem;
-  border-radius: 5px;
+  border-radius: 10px;
   -webkit-box-shadow: 0px 1px 5px 0px rgba(58, 4, 4, 0.2);
           box-shadow: 0px 1px 5px 0px rgba(58, 4, 4, 0.2);
 }
@@ -152,7 +152,7 @@ main {
   border: none;
   padding: 1rem 1.5rem;
   border: none;
-  border-radius: 5px;
+  border-radius: 10px;
   font-size: 1rem;
   -webkit-box-shadow: 0px 1px 5px 0px rgba(58, 4, 4, 0.2);
           box-shadow: 0px 1px 5px 0px rgba(58, 4, 4, 0.2);
@@ -161,6 +161,9 @@ main {
 .countries {
   background: #202c37;
   font-size: 1.4rem;
+  position: relative;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
 }
 
 .countries .countries-list {
@@ -175,24 +178,29 @@ main {
 .countries .countries-list .country-card {
   width: 25rem;
   background: #2b3945;
-  border-radius: 5px;
+  border-radius: 10px;
   -webkit-box-shadow: 0px 1px 5px 0px rgba(58, 4, 4, 0.2);
           box-shadow: 0px 1px 5px 0px rgba(58, 4, 4, 0.2);
+  border: 3px solid rgba(0, 0, 0, 0);
   -webkit-transition: all 0.2s;
   transition: all 0.2s;
+  -ms-grid-column-align: center;
+      justify-self: center;
 }
 
 .countries .countries-list .country-card-area {
   text-decoration: none;
   width: 100%;
+  height: 50%;
   color: white;
 }
 
 .countries .countries-list .country-card-flag {
   width: 100%;
+  height: 50%;
   overflow: hidden;
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 }
 
 .countries .countries-list .country-card-brief {
@@ -216,6 +224,13 @@ main {
 .countries .countries-list .country-card:hover {
   -webkit-transform: scale(1.05);
           transform: scale(1.05);
+  border: 3px solid rgba(255, 255, 255, 0.8);
+}
+
+.page-transition-away {
+  -webkit-transform: translateY(10rem);
+          transform: translateY(10rem);
+  opacity: 0%;
 }
 
 .back {
@@ -234,9 +249,17 @@ main {
   font-size: 1.6rem;
   background: #2b3945;
   padding: 0.8rem 3rem;
-  border: 5px;
+  border: 3px solid transparent;
+  border-radius: 10px;
   -webkit-box-shadow: 0px 1px 5px 0px rgba(58, 4, 4, 0.2);
           box-shadow: 0px 1px 5px 0px rgba(58, 4, 4, 0.2);
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+}
+
+.back .button-back:hover {
+  border: 3px solid rgba(255, 255, 255, 0.8);
+  border-radius: 10px;
 }
 
 .country-info {
@@ -247,6 +270,8 @@ main {
       -ms-flex-pack: justify;
           justify-content: space-between;
   font-size: 1.6rem;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
 }
 
 .country-info__flag {
@@ -255,6 +280,7 @@ main {
 
 .country-info__flag img {
   height: 30rem;
+  width: 50rem;
 }
 
 .country-info__data {
@@ -286,6 +312,15 @@ main {
   font-weight: 500;
 }
 
+.country-info__data .border-countries {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 .country-info__data .border-countries .border-countries-list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -294,5 +329,98 @@ main {
       flex-wrap: wrap;
   -ms-flex-line-pack: justify;
       align-content: space-between;
+}
+
+.country-info__data .border-countries a {
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+  border: 1px solid transparent;
+}
+
+.country-info__data .border-countries a:hover {
+  border: 1px solid rgba(255, 255, 255, 0.8);
+}
+
+.country-info.transition {
+  -webkit-transform: translateY(10rem);
+          transform: translateY(10rem);
+  opacity: 0%;
+}
+
+@media (max-width: 1024px) {
+  .country-info {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .country-info__flag {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .country-info__flag img {
+    width: 60rem;
+    height: auto;
+  }
+  .country-info__data {
+    width: 100%;
+  }
+}
+
+@media (max-width: 769px) {
+  html {
+    font-size: 8px;
+  }
+  .country-info__data {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+@media (max-width: 481px) {
+  .country-info__flag img {
+    width: 40rem;
+  }
+  .country-info__data .data-section {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 100vw;
+  }
+  .country-info__data .data-section p {
+    margin-bottom: 1rem;
+  }
+  .country-info__data .data-section-1 {
+    margin-bottom: 2rem;
+  }
+  .input-section {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
 }
 /*# sourceMappingURL=style.css.map */
