--- a/styles/style.scss
+++ b/styles/style.scss
@@ -151,12 +151,14 @@ main {
 
     .countries-list {
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-        grid-gap: 2rem;
+        grid-template-columns: repeat(auto-fit, minmax(100px, 350px) );
+        justify-content: space-between;
+        grid-gap: 10rem;
         list-style: none;
+        width: 100%;
 
         .country-card {
-            width: 25rem;
+            //width: 25rem;
             background: $primary-color;
             border-radius: $rounded-corners;
             box-shadow: $shadow-1;
@@ -240,7 +242,6 @@ main {
 .country-info {
     //width: 100%;
     display: flex;
-    justify-content: space-between;
     font-size: 1.6rem;
     transition: all 0.5s;
     
@@ -383,5 +384,9 @@ main {
     .input-section {
         flex-direction: column;
         align-items: flex-start;
+
+        .input-country {
+            margin-bottom: 2rem;
+        }
     }
 }
