--- a/styles/style.scss
+++ b/styles/style.scss
@@ -49,7 +49,7 @@ body {
     width: 100%;
     height: 5rem;
     padding: 0 5rem;
-    margin: auto;
+    margin: 0 auto;
 }
 
 .container.flex-container {
@@ -104,7 +104,7 @@ main {
             border: none;
             color: $tertiary-color;
             padding: 1.5rem 5rem;
-            font-size: 1rem;
+            font-size: 1.5rem;
             width: 40rem;
             border-radius: $rounded-corners;
             box-shadow: $shadow-1;
@@ -118,6 +118,11 @@ main {
             position: absolute;
             top: 1.25rem;
             left: 1.5rem;
+
+            svg {
+                //min-height: 1.5rem;
+                width: 2rem;
+            }
         }
 
     }
@@ -129,7 +134,7 @@ main {
         padding: 1rem 1.5rem;
         border: none;
         border-radius: $rounded-corners;
-        font-size: 1rem;
+        font-size: 1.5rem;
         box-shadow: $shadow-1;
     }
 
@@ -151,7 +156,7 @@ main {
 
     .countries-list {
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(100px, 350px) );
+        grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
         justify-content: space-between;
         grid-gap: 10rem;
         list-style: none;
@@ -159,29 +164,31 @@ main {
 
         .country-card {
             //width: 25rem;
+            //height: 50rem;
             background: $primary-color;
             border-radius: $rounded-corners;
             box-shadow: $shadow-1;
             border: 3px solid rgba(0,0,0,0);
             transition: all 0.2s;
             justify-self: center;
+            max-height: 50rem;
+            max-width: 40rem;
 
             &-area {
                 text-decoration: none;
-                width: 100%;
-                height: 50%;
                 color: $tertiary-color;
-            }      
+            }  
             
             &-flag {
                 width: 100%;
                 height: 50%;
-                overflow: hidden;
+                object-fit: cover;
                 border-top-left-radius: $rounded-corners;
                 border-top-right-radius: $rounded-corners;
             }
 
             &-brief {
+                height: 50%;
                 padding: 1rem 1.3rem 3rem 1.3rem;
 
                 h2 {
@@ -239,9 +246,14 @@ main {
     }
 }
 
+.country-container {
+    max-width: 150rem;
+}
+
 .country-info {
     //width: 100%;
     display: flex;
+    justify-content: space-around;
     font-size: 1.6rem;
     transition: all 0.5s;
     
@@ -249,13 +261,16 @@ main {
 
         width: 50%;
         img {
-            height: 30rem;
-            width: 50rem;
+            //height: 30rem;
+            object-fit: cover;
+            max-width: 80rem;
+            width: 90%;
         }
     }
 
     &__data {
         width: 50%;
+        //max-width: 80rem;
         padding: 3rem;
 
         .country-name {
@@ -275,10 +290,6 @@ main {
                 span {
                     font-weight: 500;
                 }
-            }
-
-            .data-section-1 {
-                //padding-right: 3rem;
             }
         }
 
@@ -337,6 +348,10 @@ main {
 @media (max-width: 769px) {
     html {
         font-size: 8px;
+    }
+
+    .countries-list {
+        
     }
 
     .country-info {
